Update and rename 2021-12-23-test.md to 2021-12-16-test.md

--- a/_posts/2021-12-16-test.md
+++ b/_posts/2021-12-16-test.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Group Updates"
+title: "Lorenz 96"
 ---
 
 Hello, this is a test. We will put future updates and posts here. 
